# blockchain-consensus-parallel

./: .gitignore  README.md  scaling.sh  scalingpython.sh  scalingpythonseq.sh  scalingrustseq.sh  weakscalingpython.sh  weakscalingrust.sh
output/: pow_blockchain_parallel_d4_b20_t10_w2.json  pow_blockchain_parallel_d5_b20_t10_w12.json  pow_blockchain_parallel_d5_b20_t10_w2.json  pow_blockchain_parallel_d5_b20_t10_w4.json  pow_blockchain_parallel_d5_b20_t10_w8.json  pow_blockchain_parallel_rust_d4_b20_t10_w2.json  pow_blockchain_parallel_rust_d5_b20_t10_w12.json  pow_blockchain_parallel_rust_d5_b20_t10_w2.json  pow_blockchain_parallel_rust_d5_b20_t10_w4.json  pow_blockchain_parallel_rust_d5_b20_t10_w8.json  pow_blockchain_parallel_rust_d6_b20_t10_w8.json  pow_blockchain_sequential_d5_b20_t10.json  pow_blockchain_sequential_rust_d5_b20_t10.json  pow_load_balancing_stats_d4_b20_t10_w2.csv  pow_load_balancing_stats_d5_b20_t10_w12.csv  pow_load_balancing_stats_d5_b20_t10_w2.csv  pow_load_balancing_stats_d5_b20_t10_w4.csv  pow_load_balancing_stats_d5_b20_t10_w8.csv  (+19 more)
rust/: Cargo.toml
rust/output/: pos_blockchain_rust_d12_b30_t5.json  pos_blockchain_rust_d8_b20_t5.json  pos_performance_rust_d12_b30_t5.csv  pos_performance_rust_d8_b20_t5.csv  pos_validation_rust_d12_b30_t5.json  pos_validation_rust_d8_b20_t5.json  pos_validator_stats_rust_d12_b30_t5.csv  pos_validator_stats_rust_d8_b20_t5.csv
rust/src/: blockchain.rs  main.rs  pos.rs  pow_parallel.rs  pow_sequential.rs  utils.rs
rust/src/p2p/: bootstrap.rs  error.rs  mempool.rs  mod.rs  network.rs  node.rs  protocol.rs
(+426 files in other folders)
