[package]
name = "blockchain-pow"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
parking_lot = "0.12"
rand = "0.8"

[[bin]]
name = "blockchain-pow"
path = "src/main.rs"
